# sphere

./: .gitignore  CMakeLists.txt  INSTALL.sh  README.rst  wc.sh
doc/: Makefile  sphere-doc.tex
doc/doxygen/: Doxyfile  Makefile
doc/graphics/: initsetup.eps  initsetup.fig
doc/html/: .buildinfo  cfd.html  dem.html  genindex.html  index.html  introduction.html  objects.inv  py-modindex.html  python_api.html  search.html  searchindex.js  sphere_internals.html
doc/html/_sources/: dem.txt  index.txt  introduction.txt  python_api.txt  sphere_internals.txt
doc/latex/: sphere.ilg  sphere.ind  sphere.tex  sphere.toc
doc/pdf/: sphere.aux  sphere.idx  sphere.out
doc/raytracer/: px-performance.txt  raytracer.tex
doc/sphinx/: Makefile  cfd.rst  conf.py  cpp.rst  dem.rst  index.rst  introduction.rst  sphere_internals.rst  sphere_ref.rst
elastic-debug/: sphere.py
gnuplot/scripts/: plotts.gp
img_out/: about.txt
mfiles/: freadbin.m  fwritebin.m  initsetup.m  plotspheres.m  status.m  useoutput.m  visualize.m
output/: about.txt
python/: 1e4-largesize-uniaxial.py  bondtest.py  collapse.py  collision.py  darcy.py  elastic_collision.py  inelastic_collision.py  ns_cons_of_mass.py  ns_cons_of_mass_run.sh  segregation.py  shear-test.py  sphere.py  test.py  tests.py  triaxial.py  uniaxial.py
raytracer/: Makefile  README  colorbar.h  header.h  io.cpp  main.cpp  o-ppm.cpp  o-ppm.h  render_all_outputs_CPU.sh  render_all_outputs_GPU.sh  render_all_outputs_GPU_clever.sh  rt-kernel-cpu.cpp  rt-kernel-cpu.h  rt-kernel.cu  rt-kernel.h  rt_GPU_init_pres.sh  rt_GPU_pres.sh  rt_GPU_tall_pres.sh  rt_kernel.h  rt_kernel_cpu.cpp
raytracer/doc/: .raytracer.tex.swp  np-performance.txt  raytracer.tex
src/: CMakeLists.txt  Makefile  boost-unit-tests.cpp  cohesion.cuh  colorbar.h  constants.cuh  constants.h  contactmodels.cuh  contactsearch.cuh  darcy.cpp  darcy.cuh  datatypes.cuh  datatypes.h  debug.h  device.cu  file_io.cpp  forcechains.cpp  integration.cuh  latticeboltzmann.cuh  main.cpp  navierstokes.cpp  navierstokes.cuh  porosity.cpp  porousflow.cpp  raytracer.cuh  rigid.cpp  sorting.cuh  sphere.cpp  sphere.h  sphere_status.cpp  sphere_status_compile.sh  typedefs.h  utility.cpp  utility.cu  utility.cuh  utility.h  vector_arithmetic.h
tests/: CMakeLists.txt  bond_tests.py  io_tests.py  io_tests_fluid.py  memcheck_tests.py  porosity_tests.py  pytestutils.py  sphere.py
